Test: apply the google rules